--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "raketa-test",
+  "name": "google-books",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,9 +10,16 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "classnames": "^2.3.2",
+    "immer": "^9.0.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router": "^6.6.2",
+    "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "node-sass": "^8.0.0"
   }
 }
